removed visibility for mobile users while fixing issues

--- a/src/index.css
+++ b/src/index.css
@@ -73,8 +73,8 @@ body {
     display: none;
   }
 } */
-/* @media only screen and (max-width: 1023px) {
+@media only screen and (max-width: 1023px) {
   .container {
     display: none;
   }
-} */
+}
